Update index.html changing little

--- a/331project1/index.html
+++ b/331project1/index.html
@@ -18,7 +18,7 @@
         </div>
         <h1>Sam Brokaw - New Page Edited 3</h1>
         <img src="pictures/IMG_0583.JPG" alt="Picture of Sam Brokaw" class="abtMe">
-        <p class="centertext"> Howdy, my name is Sam Brokaw and I am a junior Computer Science major at <a href="https://www.tamu.edu/">Texas A&M University</a></p>
+        <p class="centertext"> Howdy, my name is Mas Brokaw and I am a junior Computer Science major at <a href="https://www.tamu.edu/">Texas A&M University</a></p>
         <p class="centertext"> I am a problem solver at heart and would love to use that passion for the benefit of a team. I also like playing 
             <a href="https://www.jeopardy.com/">Jeopardy</a>, disc golf, <a href="https://spikeball.com/">spikeball</a>, and ultimate frisbee with my friends. 
         </p>
