--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <li><a href="portfolio.html">Portfolio</a></li>
             </ul>
         </div>
-        <h1>Sam Brokaw</h1>
+        <h1>Sam Brokaw - Making Edits</h1>
         <img src="pictures/IMG_0583.JPG" alt="Picture of Sam Brokaw" class="abtMe">
         <p class="centertext"> Howdy, my name is Sam Brokaw and I am a junior Computer Science major at <a href="https://www.tamu.edu/">Texas A&M University</a></p>
         <p class="centertext"> I am a problem solver at heart and would love to use that passion for the benefit of a team. I also like playing 
