--- a/service.html
+++ b/service.html
@@ -14,9 +14,9 @@
                 <li><a href="portfolio.html">Portfolio</a></li>
             </ul>
         </div>
-        <h1> Service </h1>
+        <h1> Service - Making Edits</h1>
         <p> 
-            One of my greatest sources of joy in life comes from sharing the gospel of Jesus Christ with children and watching as God works in their lives. 
+            Editing One of my greatest sources of joy in life comes from sharing the gospel of Jesus Christ with children and watching as God works in their lives. 
             I have had the privilege of being a leader and counselor for a couple of high school aged summer camps. Being able to invest in the lives of people 
             who are younger than you and desperately need a role model in their life as well as being able to show them the gospel of Jesus through those opportunities 
             is a life changing experience. 
