--- a/service.html
+++ b/service.html
@@ -16,7 +16,7 @@
         </div>
         <h1> Service </h1>
         <p> 
-            Edits One of my greatest sources of joy in life comes from sharing the gospel of Jesus Christ with children and watching as God works in their lives. 
+            One of my greatest sources of joy in life comes from sharing the gospel of Jesus Christ with children and watching as God works in their lives. 
             I have had the privilege of being a leader and counselor for a couple of high school aged summer camps. Being able to invest in the lives of people 
             who are younger than you and desperately need a role model in their life as well as being able to show them the gospel of Jesus through those opportunities 
             is a life changing experience. 
