--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
         <h1> Portfolio </h1>
         <h2>Action Tracker</h2>
         <p>
-
+            Hi guys
         </p>
         <img src="pictures/Capture.JPG" alt="Picture" class="actionTracker">
         <div class="icon-bar">
